Add error handling tests for axios interceptors and improve feedback store tests